Fix whitespace on mobile views

--- a/style.css
+++ b/style.css
@@ -36,13 +36,6 @@ body {
     margin: 0;
     font-family: Roboto;
     color: #1f2937;
-    height: 100%;
-    width: 100%;
-}
-
-body {
-    min-height: 100%;
-    min-width: 100%;
 }
 
 .header {
